--- a/reports/mono-2.0/HPLT-v2-kac_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-kac_Latn.yaml
@@ -30,7 +30,7 @@ docs_segments: '[[1, 121], [2, 265], [3, 345], [4, 447], [5, 456], [6, 364], [7,
   1], [697, 5], [956, 1], [1019, 1]]'
 docs_segments_mean: 21
 docs_segments_median: 12
-docs_timestamp: 1730827704.5933537
+docs_timestamp: 1732639486.9611678
 docs_top100_domains: '[["blogspot.com", 2373], ["kachinnews.com", 1148], ["dehong.gov.cn",
   1100], ["blogspot.sg", 371], ["jw.org", 358], ["blogspot.co.nz", 342], ["kachinnet.net",
   286], ["hkakaborazi.net", 139], ["rvasia.org", 135], ["kachinlandnews.com", 117],
@@ -74,8 +74,8 @@ docs_wds: '[[5, 75], [5.1, 62], [5.2, 76], [5.3, 67], [5.4, 85], [5.5, 52], [5.6
   [9.2, 93], [9.3, 133], [9.4, 88], [9.5, 75], [9.6, 86], [9.7, 76], [9.8, 43], [9.9,
   21], [10, 1]]'
 corpus: kac_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 21120, "no_urls": 2663, "no_bad_encoding":
-  7, "pii": 262}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 7884, "no_urls": 2010, "no_bad_encoding":
+  4, "pii": 262}'
 sentence_pairs: 159416
 src_bytes: 27.31 MB
 src_chars: 28248636
@@ -327,9 +327,17 @@ src_unique_sents: '[[0, 1], [1, 1063], [2, 1414], [3, 1982], [4, 2848], [5, 4207
   1], [2477, 1], [2479, 1], [2593, 1], [2634, 1], [2697, 1], [2814, 1], [3039, 1],
   [6247, 1], [6248, 1], [6499, 1], [8501, 1], [8517, 1]]'
 srclang: kac
-timestamp: 1730827840.8602602
+timestamp: 1732639633.6655796
 unique_sents: 85544
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_kac_nostopwords
+src_ngrams: '{"1": [[["ai"], 428859], [["ni"], 160002], [["nga"], 141790], [["hpe"],
+  139812], [["gaw"], 97684]], "2": [[["nga ai"], 73792], [["ai lam"], 36289], [["ni
+  hpe"], 28241], [["rai nga"], 26200], [["ra ai"], 15982]], "3": [[["rai nga ai"],
+  20569], [["yawn yawn yawn"], 7311], [["chye lu ai"], 7210], [["nga ma ai"], 6484],
+  [["ai lam ni"], 5497]], "4": [[["yawn yawn yawn yawn"], 7288], [["lam chye lu ai"],
+  2369], [["kaning rai nme law"], 2159], [["lam rai nga ai"], 1877], [["ai lam rai
+  nga"], 1490]], "5": [[["yawn yawn yawn yawn yawn"], 7265], [["ai lam rai nga ai"],
+  1407], [["ai lam chye lu ai"], 1363], [["lam na chye lu ai"], 882], [["shiga na
+  chye lu ai"], 775]]}'
