--- a/reports/mono-2.0/HPLT-v2-fij_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-fij_Latn.yaml
@@ -28,7 +28,7 @@ docs_segments: '[[1, 1022], [2, 364], [3, 582], [4, 202], [5, 199], [6, 262], [7
   1], [831, 3], [1075, 1], [1845, 1], [1846, 1], [2402, 1]]'
 docs_segments_mean: 20
 docs_segments_median: 12
-docs_timestamp: 1730367462.3900652
+docs_timestamp: 1732703018.9241257
 docs_top100_domains: '[["jw.org", 3194], ["fijitimes.com", 773], ["wikipedia.org",
   646], ["bible.is", 626], ["vitifm.com.fj", 500], ["wordproject.org", 308], ["fijilive.com",
   290], ["fijianlyrics.com", 222], ["lds.org", 173], ["matavuvale.com", 154], ["churchofjesuschrist.org",
@@ -77,8 +77,8 @@ docs_wds: '[[5, 73], [5.1, 95], [5.2, 90], [5.3, 65], [5.4, 91], [5.5, 81], [5.6
   101], [9.3, 106], [9.4, 78], [9.5, 85], [9.6, 74], [9.7, 64], [9.8, 32], [9.9, 23],
   [10, 3]]'
 corpus: fij_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 12421, "no_urls": 1891, "no_bad_encoding":
-  1, "pii": 162}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 17144, "no_urls": 1006, "no_bad_encoding":
+  3, "pii": 162}'
 sentence_pairs: 178924
 src_bytes: 36.05 MB
 src_chars: 37520766
@@ -399,9 +399,18 @@ src_unique_sents: '[[0, 1], [1, 1084], [2, 2673], [3, 2344], [4, 3165], [5, 3965
   [2344, 1], [2357, 1], [2371, 1], [2409, 1], [2455, 1], [2544, 1], [2573, 1], [3069,
   1], [3096, 1], [6156, 1], [14721, 1], [22500, 1], [41410, 1], [50186, 1]]'
 srclang: fj
-timestamp: 1730367620.8030162
+timestamp: 1732703166.8541076
 unique_sents: 117544
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_fj_nostopwords
+src_ngrams: '{"1": [[["ena"], 145862], [["mai"], 80863], [["ga"], 73762], [["kina"],
+  72439], [["ira"], 68035]], "2": [[["tale ga"], 16686], [["ena gauna"], 8373], [["i
+  jiova"], 6024], [["sara ga"], 5826], [["ena dua"], 5286]], "3": [[["ira na tamata"],
+  2930], [["kina e dua"], 2049], [["matanitu ni kalou"], 1858], [["mai vei ira"],
+  1837], [["dua na gauna"], 1830]], "4": [[["cake cake cake cake"], 1527], [["ena
+  dua na gauna"], 876], [["ena so na gauna"], 728], [["mai vua na kalou"], 694], [["ira
+  na nona tamata"], 596]], "5": [[["cake cake cake cake cake"], 1503], [["qnimate
+  qnimate qnimate qnimate qnimate"], 497], [["mai na vosa ni kalou"], 321], [["local
+  and international rugby news"], 224], [["local and international footbal news"],
+  224]]}'
