--- a/reports/mono-2.0/HPLT-v2-bjn_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-bjn_Latn.yaml
@@ -42,7 +42,7 @@ docs_segments: '[[1, 753], [2, 1523], [3, 2043], [4, 1441], [5, 1345], [6, 977],
   [2290, 1], [2293, 1], [2300, 2], [3216, 2], [4153, 1]]'
 docs_segments_mean: 20
 docs_segments_median: 8
-docs_timestamp: 1730211349.271518
+docs_timestamp: 1732708300.946475
 docs_top100_domains: '[["wikipedia.org", 7053], ["blogspot.com", 1430], ["wordpress.com",
   988], ["banjarmasinbungas.com", 637], ["bible.is", 535], ["sciencegraph.net", 397],
   ["petalokasi.org", 244], ["tribunnews.com", 225], ["forvo.com", 180], ["blogspot.co.id",
@@ -98,7 +98,7 @@ docs_wds: '[[5, 591], [5.1, 591], [5.2, 536], [5.3, 583], [5.4, 496], [5.5, 482]
   [9.1, 460], [9.2, 58], [9.3, 37], [9.4, 38], [9.5, 21], [9.6, 9], [9.7, 10], [9.8,
   16], [9.9, 3]]'
 corpus: bjn_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 21554, "no_urls": 6969, "no_bad_encoding":
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 36261, "no_urls": 7753, "no_bad_encoding":
   15, "pii": 420}'
 sentence_pairs: 366336
 src_bytes: 53.33 MB
@@ -342,9 +342,19 @@ src_unique_sents: '[[0, 1], [1, 2810], [2, 6270], [3, 7399], [4, 7804], [5, 1095
   1], [4714, 1], [5055, 1], [6966, 1], [8132, 1], [8309, 1], [9093, 1], [15891, 1],
   [31242, 3], [32099, 2]]'
 srclang: bjn
-timestamp: 1730211519.2945921
+timestamp: 1732708563.6495256
 unique_sents: 154702
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_bjn_nostopwords
+src_ngrams: '{"1": [[["arjuna"], 28581], [["banjarmasin"], 28345], [["hotel"], 20187],
+  [["je"], 19277], [["caps"], 18504]], "2": [[["warfarin arjuna"], 8435], [["caps
+  arjuna"], 8399], [["sunting sumber"], 8337], [["caps warfarin"], 4921], [["warfarin
+  warfarin"], 4891]], "3": [[["caps warfarin arjuna"], 2411], [["warfarin warfarin
+  arjuna"], 2309], [["jual rok tutu"], 1714], [["tutu di banjarmasin"], 1712], [["caps
+  arjuna warfarin"], 1677]], "4": [[["rok tutu di banjarmasin"], 1712], [["grosir
+  jual rok tutu"], 1284], [["tutu di banjarmasin murah"], 1070], [["caps warfarin
+  arjuna warfarin"], 846], [["caps arjuna warfarin arjuna"], 833]], "5": [[["jual
+  rok tutu di banjarmasin"], 1712], [["rok tutu di banjarmasin murah"], 1070], [["hotel
+  hotel hotel hotel hotel"], 810], [["caps warfarin arjuna warfarin arjuna"], 410],
+  [["warfarin warfarin arjuna warfarin arjuna"], 400]]}'
