--- a/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-vec_Latn.yaml
@@ -62,7 +62,7 @@ docs_segments: '[[1, 3796], [2, 5109], [3, 5250], [4, 7501], [5, 4205], [6, 4507
   2], [1707, 1], [1780, 1], [1783, 1], [1912, 1], [2339, 1], [2608, 2], [2609, 1]]'
 docs_segments_mean: 19
 docs_segments_median: 10
-docs_timestamp: 1730972921.777865
+docs_timestamp: 1732712657.0269122
 docs_top100_domains: '[["wikipedia.org", 35243], ["meteo-world.com", 1791], ["2night.it",
   784], ["brasiltalian.com", 770], ["verbling.com", 571], ["gelocal.it", 564], ["larenadomila.it",
   555], ["sonorika.com", 516], ["blogspot.com", 469], ["ilovehomemade.nl", 436], ["blogspot.it",
@@ -120,8 +120,8 @@ docs_wds: '[[5, 3673], [5.1, 3206], [5.2, 3064], [5.3, 2807], [5.4, 2695], [5.5,
   [8.9, 814], [9, 451], [9.1, 492], [9.2, 286], [9.3, 262], [9.4, 192], [9.5, 196],
   [9.6, 165], [9.7, 93], [9.8, 6], [9.9, 18]]'
 corpus: vec_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 106432, "no_urls": 29356, "no_bad_encoding":
-  168, "pii": 2800}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 192637, "no_urls": 29364, "no_bad_encoding":
+  175, "pii": 2800}'
 sentence_pairs: 1578812
 src_bytes: 210.64 MB
 src_chars: 216477126
@@ -605,8 +605,18 @@ src_unique_sents: '[[0, 1], [1, 12850], [2, 27613], [3, 30244], [4, 35718], [5, 
   1], [21033, 1], [21919, 1], [22742, 1], [23667, 1], [31612, 1], [35735, 1], [45884,
   1], [59819, 1], [61151, 1], [67295, 1]]'
 srclang: vec
-timestamp: 1730973631.2195792
+timestamp: 1732713665.202257
 unique_sents: 706548
 warnings:
 - src_warning_tok_nltk_wordpunct
-- src_ngrams_vec_nostopwords
+src_ngrams: '{"1": [[["canbia"], 195282], [["d"], 86576], [["hotel"], 70986], [["maria"],
+  68062], [["roma"], 58738]], "2": [[["tutori inglesi"], 53907], [["canbia sorxente"],
+  38745], [["plagio plagio"], 30804], [["santa maria"], 21004], [["stemma famiglia"],
+  15737]], "3": [[["plagio plagio plagio"], 30794], [["canbia el c\u00f2daxe"], 28343],
+  [["canbia el c\u00f2dexe"], 24890], [["araldica e stemma"], 15165], [["case in vendita"],
+  10581]], "4": [[["plagio plagio plagio plagio"], 30784], [["araldica e stemma famiglia"],
+  15165], [["wikimedia commons el detien"], 6506], [["commons el detien im\u00e0jini"],
+  6256], [["im\u00e0jini o altri file"], 6252]], "5": [[["plagio plagio plagio plagio
+  plagio"], 30777], [["wikimedia commons el detien im\u00e0jini"], 6256], [["detien
+  im\u00e0jini o altri file"], 6252], [["oro oro oro oro oro"], 3670], [["marmota
+  marmota marmota marmota marmota"], 3070]]}'
