--- a/reports/mono-2.0/HPLT-v2-umb_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-umb_Latn.yaml
@@ -18,7 +18,7 @@ docs_segments: '[[1, 60], [2, 16], [3, 95], [4, 69], [5, 47], [6, 52], [7, 90], 
   [230, 1], [325, 1], [421, 1], [434, 1], [505, 1], [603, 1]]'
 docs_segments_mean: 24
 docs_segments_median: 17
-docs_timestamp: 1730723454.7975378
+docs_timestamp: 1732721054.1301622
 docs_top100_domains: '[["jw.org", 1932], ["neweralive.na", 167], ["bible.is", 108],
   ["kundana.com.na", 95], ["blogspot.com", 28], ["globalrecordings.net", 26], ["pngscriptures.org",
   19], ["watchtower.org", 12], ["unicode.org", 11], ["blogspot.pt", 7], ["ibnzura.com",
@@ -45,8 +45,8 @@ docs_wds: '[[5, 37], [5.1, 33], [5.2, 30], [5.3, 45], [5.4, 57], [5.5, 31], [5.6
   68], [8.7, 34], [8.8, 28], [8.9, 43], [9, 29], [9.1, 34], [9.2, 15], [9.3, 20],
   [9.4, 16], [9.5, 13], [9.6, 10], [9.7, 5], [9.8, 2]]'
 corpus: umb_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 3001, "no_urls": 125, "no_bad_encoding":
-  186, "pii": 31}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 2996, "no_urls": 137, "no_bad_encoding":
+  187, "pii": 31}'
 sentence_pairs: 59912
 src_bytes: 14.8 MB
 src_chars: 15348339
@@ -168,9 +168,17 @@ src_unique_sents: '[[1, 163], [2, 867], [3, 825], [4, 1066], [5, 1253], [6, 1262
   [1325, 1], [1477, 1], [1480, 1], [1489, 1], [1507, 1], [1518, 1], [1528, 1], [1593,
   1], [1730, 1], [1975, 1], [2108, 1], [2495, 1]]'
 srclang: umb
-timestamp: 1730723531.2221134
+timestamp: 1732721133.4400406
 unique_sents: 41987
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
-- src_ngrams_umb_nostopwords
+src_ngrams: '{"1": [[["li"], 58413], [["va"], 38896], [["ka"], 27550], [["okwa"],
+  25024], [["oku"], 21506]], "2": [[["okwa li"], 12853], [["ova li"], 4999], [["li
+  va"], 4042], [["nosho yo"], 3530], [["ka kala"], 3162]], "3": [[["ova li va"], 2625],
+  [["shi na sha"], 2374], [["jesus okwa li"], 1452], [["ovo va li"], 1078], [["oo
+  a li"], 1038]], "4": [[["lie lie lie lie"], 496], [["okwa li a lombwela"], 429],
+  [["wa omae dake ka"], 329], [["omae dake ka yo"], 329], [["wo suki nano wa"], 328]],
+  "5": [[["lie lie lie lie lie"], 493], [["wa omae dake ka yo"], 329], [["wo suki
+  nano wa omae"], 328], [["suki nano wa omae dake"], 328], [["nano wa omae dake ka"],
+  328]]}'
