--- a/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
+++ b/reports/mono-2.0/HPLT-v2-crh_Latn.yaml
@@ -51,7 +51,7 @@ docs_segments: '[[1, 3838], [2, 5202], [3, 7044], [4, 12693], [5, 15422], [6, 13
   [1546, 1], [1737, 1], [1963, 2], [3443, 1]]'
 docs_segments_mean: 11
 docs_segments_median: 7
-docs_timestamp: 1730710424.1618667
+docs_timestamp: 1732721488.9586318
 docs_top100_domains: '[["krymr.com", 52825], ["azatliq.org", 21853], ["wikipedia.org",
   14269], ["inform.kz", 4867], ["trt.net.tr", 2398], ["qazaqtimes.com", 2305], ["almaty-akshamy.kz",
   1950], ["avdet.org", 1513], ["turkuindir.info", 1401], ["baq.kz", 996], ["shalqar.kz",
@@ -107,8 +107,8 @@ docs_wds: '[[5, 1042], [5.1, 930], [5.2, 966], [5.3, 834], [5.4, 1014], [5.5, 10
   [8.9, 2261], [9, 2387], [9.1, 2484], [9.2, 2034], [9.3, 1400], [9.4, 1073], [9.5,
   880], [9.6, 838], [9.7, 624], [9.8, 417], [9.9, 142], [10, 37]]'
 corpus: crh_Latn.jsonl.tsv
-hardrules_tags: '{"not_too_long": 0, "not_too_short": 66310, "no_urls": 15048, "no_bad_encoding":
-  1010, "pii": 1158}'
+hardrules_tags: '{"not_too_long": 0, "not_too_short": 67429, "no_urls": 15500, "no_bad_encoding":
+  999, "pii": 1158}'
 sentence_pairs: 1380903
 src_bytes: 301.82 MB
 src_chars: 279816188
@@ -414,8 +414,23 @@ src_unique_sents: '[[0, 1], [1, 7131], [2, 12936], [3, 17983], [4, 25911], [5, 2
   [5936, 1], [6843, 1], [6883, 1], [7096, 1], [7990, 1], [9124, 1], [9506, 1], [10397,
   1], [21338, 1], [21797, 1], [88565, 1]]'
 srclang: crh
-timestamp: 1730714181.420027
+timestamp: 1732722468.655625
 unique_sents: 774648
 warnings:
 - src_warning_tok_nltk_wordpunct
 - src_fasttext
+src_ngrams: '{"1": [[["q\u0131r\u0131m"], 157006], [["rusiye"], 147118], [["dep"],
+  144398], [["h\u00e4m"], 121927], [["edi"], 111291]], "2": [[["q\u0131r\u0131mtatar
+  milliy"], 21231], [["hizb ut"], 18252], [["i\u015f\u011fal etilgen"], 17655], [["ekrem
+  \u00e7elebi"], 15204], [["qayd etti"], 12629]], "3": [[["q\u0131r\u0131mtatar milliy
+  meclisini\u00f1"], 7628], [["ukraina prezidenti petro"], 6895], [["prezidenti petro
+  poro\u015fenko"], 6807], [["tarihiy adaletni\u00f1 tiklenmesi"], 6422], [["s\u0131ra
+  iqtisadiy sanktsiyalarn\u0131"], 5954]], "4": [[["ukraina prezidenti petro poro\u015fenko"],
+  6657], [["\u011farp memleketleri bir s\u0131ra"], 4693], [["memleketleri bir s\u0131ra
+  iqtisadiy"], 4693], [["rusiye prezidenti vladimir putin"], 4500], [["prezidenti
+  petro poro\u015fenko bun\u0131\u00f1nen"], 4390]], "5": [[["\u011farp memleketleri
+  bir s\u0131ra iqtisadiy"], 4693], [["ukraina prezidenti petro poro\u015fenko bun\u0131\u00f1nen"],
+  4390], [["prezidenti petro poro\u015fenko bun\u0131\u00f1nen ba\u011fl\u0131"],
+  4390], [["poro\u015fenko bun\u0131\u00f1nen ba\u011fl\u0131 qanunn\u0131 imzalad\u0131"],
+  4385], [["petro poro\u015fenko bun\u0131\u00f1nen ba\u011fl\u0131 qanunn\u0131"],
+  4382]]}'
